Bug #105334 - solaris acrobat plugin requires motif.  Fixed by jim.song@sun.com.  a=jdunn@netscape.com